# plyimporter

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  README.md
.ShCI/: linux-log.md  windows-log.md
Assets/: ageometry.ply  aquad.ply  atriangle.ply  geometry.ply  quad.ply  triangle.ply
Example/src/: Example.c
PlyExample/src/: Example.c  plyExample.c
PlyImporter/include/: PlyImporter.h
PlyImporter/include/plyimporter/: plyImporter.h
PlyImporter/src/: PlyImporter.c
PlyImporter/src/plyimporter/: plyImporter.c
